--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.dualism.proj1">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +21,7 @@
         </activity>
         <activity android:name=".MyDictionariesActivity" />
         <activity android:name=".LearnWordsActivity" />
-        <activity android:name=".WordTranslation"></activity>
+        <activity android:name=".WordTranslationActivity"></activity>
     </application>
 
 </manifest>
