--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".WordTranslationActivity"/>
         <activity android:name=".Register">
         </activity>
+        <activity android:name=".TranslationWordActivity">
+        </activity>
     </application>
 
 </manifest>
