--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login">
+        <activity android:name=".Login_Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -24,7 +24,7 @@
         <activity android:name=".MyDictionariesActivity"/>
         <activity android:name=".LearnWordsActivity"/>
         <activity android:name=".WordTranslationActivity"/>
-        <activity android:name=".Register">
+        <activity android:name=".Register_Activity">
         </activity>
         <activity android:name=".TranslationWordActivity">
         </activity>
