--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".MyDictionariesActivity"/>
         <activity android:name=".LearnWordsActivity"/>
         <activity android:name=".WordTranslationActivity"/>
-        <activity android:name=".Register_Activity">
+        <activity android:name=".Register_Activity"/>
+        <activity android:name=".GetAudio">
         </activity>
         <activity android:name=".TranslationWordActivity">
         </activity>
