--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
     compile 'org.apache.httpcomponents:httpclient:4.5.3'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
 }
