--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <service android:name=".Services.MyService" />
-        <service android:name=".Services.PlayAudioService" />
+        <service android:name=".Services.MyService"/>
+        <service android:name=".Services.PlayAudioService"/>
 
         <activity android:name=".Login_Activity">
             <intent-filter>
@@ -23,7 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".MyDictionariesActivity"/>
@@ -33,6 +33,8 @@
         <activity android:name=".GetAudio">
         </activity>
         <activity android:name=".TranslationWordActivity">
+        </activity>
+        <activity android:name=".SpeakingActivity">
         </activity>
     </application>
 
