--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         </activity>
         <activity android:name=".SpeakingActivity">
         </activity>
+        <activity android:name=".AuditionActivity">
+        </activity>
     </application>
 
 </manifest>
