--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,11 @@
         </activity>
         <activity android:name=".SpeakingActivity">
         </activity>
-        <activity android:name=".AuditionActivity"
-                  android:windowSoftInputMode="adjustPan">
+        <activity
+            android:name=".AuditionActivity"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+        <activity android:name=".ResultActivity">
         </activity>
     </application>
 
